feat: add basic post & get file

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ .name }}</title>
+    <title>yuki</title>
 </head>
 <body>
   <pre>
-{{ .name }} is a no bullshit file hosting service.
+yuki is a no bullshit file hosting service.
 =============
 
 HTTP POST files here:
